<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.0-M4</version>
        <relativePath></relativePath>
    </parent>

    <groupId>it.petrovich</groupId>
    <artifactId>rss-aggregator</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>checkstyle-tools</module>
        <module>rss-domain</module>
        <module>rss-logging</module>
        <module>rss-notification-core</module>
        <module>rss-notification-provider</module>
        <module>rss-notification-telegram</module>
        <module>rss-processor</module>
        <module>rss-storage</module>
        <module>rss-xml</module>
        <module>rss-api</module>
    </modules>

    <properties>
        <apache.commons.io.version>2.11.0</apache.commons.io.version>
        <findbugs.version>3.0.2</findbugs.version>
        <glassfish.jakarta.el.version>4.0.1</glassfish.jakarta.el.version>
        <google.findbugs.version>3.0.2</google.findbugs.version>
        <guava.version>31.0.1-jre</guava.version>
        <hibernate.validator.version>8.0.0.CR2</hibernate.validator.version>
        <jakarta.activation.version>2.0.1</jakarta.activation.version>
        <jakarta.el.version>4.0.0</jakarta.el.version>
        <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
        <jakarta.validation.version>3.0.1</jakarta.validation.version>
        <jakarta.xml.bind.version>3.0.1</jakarta.xml.bind.version>
        <java.version>17</java.version>
        <javax.xml.bind.version>2.4.0-b180830.0359</javax.xml.bind.version>
        <jaxb.runtime.version>3.0.2</jaxb.runtime.version>
        <jaxb2-maven-plugin.version>3.0.0</jaxb2-maven-plugin.version>
        <jsoup.version>1.14.3</jsoup.version>
        <logback.version>1.2.11</logback.version>
        <logstash-encoder.version>7.0.1</logstash-encoder.version>
        <lombok.version>1.18.24</lombok.version>
        <mapstruct.version>1.5.2.Final</mapstruct.version>
        <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <puppycrawl.version>9.1</puppycrawl.version>
        <springdoc-webflux-ui.version>1.6.9</springdoc-webflux-ui.version>
        <telegram.bots.version>5.7.1</telegram.bots.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>${hibernate.validator.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>repository.spring.milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
        <repository>
            <id>repository.spring.snapshot</id>
            <name>Spring Snapshot Repository</name>
            <url>https://repo.spring.io/snapshot</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>repository.spring.milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </pluginRepository>
        <pluginRepository>
            <id>repository.spring.snapshot</id>
            <name>Spring Snapshot Repository</name>
            <url>https://repo.spring.io/snapshot</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.checkstyle.plugin.version}</version>
                <configuration>
                    <configLocation>checkstyle-tools/src/main/resources/rss-checkstyle.xml</configLocation>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${puppycrawl.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>validate</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <createBackupFile>false</createBackupFile>
                    <sortProperties>true</sortProperties>
                    <keepBlankLines>true</keepBlankLines>
                    <sortDependencies>groupId,artifactId</sortDependencies>
                    <nrOfIndentSpace>4</nrOfIndentSpace>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>sort</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
        </plugins>
    </build>
</project>
